--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,7 +116,9 @@
             android:name=".activities.AddMissingExpertise"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
-        <activity android:name=".activities.MyIntroActivity" />
+        <activity android:name=".activities.MyIntroActivity"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".activities.VerifyCompany"
             android:screenOrientation="portrait"
